// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defines a valid Oxlint config 1`] = `
{
  "categories": {
    "correctness": "error",
    "pedantic": "error",
    "perf": "error",
    "restriction": "error",
    "style": "error",
    "suspicious": "error",
  },
  "env": {
    "browser": true,
    "node": true,
  },
  "options": {
    "typeAware": true,
  },
  "overrides": [
    {
      "files": [
        "**/*.d.{ts,cts,mts}",
        "**/*.test-d.{ts,cts,mts}",
      ],
      "rules": {
        "import/no-empty-named-blocks": "off",
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "typescript/consistent-type-definitions": "off",
        "typescript/no-empty-interface": "off",
        "typescript/no-empty-object-type": "off",
        "typescript/no-restricted-types": "off",
        "unicorn/require-module-specifiers": "off",
      },
    },
    {
      "files": [
        "**/*.test.{ts,tsx,cts,mts}",
        "**/*.test-d.{ts,cts,mts}",
      ],
      "rules": {
        "eslint/no-alert": "off",
        "eslint/no-empty-function": "off",
        "eslint/no-param-reassign": "off",
        "eslint/no-promise-executor-return": "off",
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "jest/expect-expect": "warn",
        "jest/no-commented-out-tests": "warn",
        "jest/no-conditional-expect": "error",
        "jest/no-conditional-in-test": "error",
        "jest/no-confusing-set-timeout": "error",
        "jest/no-deprecated-functions": "error",
        "jest/no-disabled-tests": "warn",
        "jest/no-duplicate-hooks": "warn",
        "jest/no-export": "error",
        "jest/no-focused-tests": "warn",
        "jest/no-identical-title": "warn",
        "jest/no-interpolation-in-snapshots": "error",
        "jest/no-mocks-import": "error",
        "jest/no-standalone-expect": "error",
        "jest/no-test-return-statement": "error",
        "jest/no-unneeded-async-expect-function": "error",
        "jest/padding-around-test-blocks": "error",
        "jest/prefer-comparison-matcher": "error",
        "jest/prefer-each": "error",
        "jest/prefer-equality-matcher": "error",
        "jest/prefer-expect-resolves": "error",
        "jest/prefer-hooks-in-order": "warn",
        "jest/prefer-hooks-on-top": "warn",
        "jest/prefer-jest-mocked": "error",
        "jest/prefer-mock-promise-shorthand": "error",
        "jest/prefer-mock-return-shorthand": "error",
        "jest/prefer-strict-equal": "error",
        "jest/prefer-to-be": "error",
        "jest/prefer-to-contain": "error",
        "jest/prefer-to-have-been-called": "error",
        "jest/prefer-to-have-been-called-times": "error",
        "jest/prefer-to-have-length": "error",
        "jest/prefer-todo": "error",
        "jest/require-to-throw-message": "error",
        "jest/valid-describe-callback": "error",
        "jest/valid-expect": "error",
        "jest/valid-title": "error",
        "jsx-a11y/alt-text": "off",
        "jsx-a11y/anchor-ambiguous-text": "off",
        "jsx-a11y/anchor-has-content": "off",
        "jsx-a11y/anchor-is-valid": "off",
        "jsx-a11y/click-events-have-key-events": "off",
        "jsx-a11y/heading-has-content": "off",
        "jsx-a11y/html-has-lang": "off",
        "jsx-a11y/iframe-has-title": "off",
        "jsx-a11y/jsx-no-target-blank": "off",
        "jsx-a11y/label-has-associated-control": "off",
        "jsx-a11y/lang": "off",
        "jsx-a11y/mouse-events-have-key-events": "off",
        "jsx-a11y/no-access-key": "off",
        "jsx-a11y/no-autofocus": "off",
        "jsx-a11y/no-distracting-elements": "off",
        "jsx-a11y/no-noninteractive-tabindex": "off",
        "jsx-a11y/no-redundant-roles": "off",
        "jsx-a11y/no-static-element-interactions": "off",
        "jsx-a11y/prefer-tag-over-role": "off",
        "jsx-a11y/scope": "off",
        "jsx-a11y/tabindex-no-positive": "off",
        "oxc/approx-constant": "off",
        "oxc/no-accumulating-spread": "off",
        "oxc/no-map-spread": "off",
        "promise/catch-or-return": "off",
        "promise/no-callback-in-promise": "off",
        "promise/no-promise-in-callback": "off",
        "promise/no-return-wrap": "off",
        "promise/prefer-await-to-then": "off",
        "react-perf/jsx-no-new-array-as-prop": "off",
        "react/button-has-type": "off",
        "react/checked-requires-onchange-or-readonly": "off",
        "react/jsx-no-target-blank": "off",
        "react/jsx-no-useless-fragment": "off",
        "react/no-array-index-key": "off",
        "react/no-children-prop": "off",
        "react/no-danger": "off",
        "typescript/ban-ts-comment": "off",
        "typescript/explicit-module-boundary-types": "off",
        "typescript/no-base-to-string": "off",
        "typescript/no-confusing-void-expression": "off",
        "typescript/no-extraneous-class": "off",
        "typescript/no-restricted-types": "off",
        "typescript/no-unsafe-argument": "off",
        "typescript/no-unsafe-assignment": "off",
        "typescript/no-unsafe-call": "off",
        "typescript/no-unsafe-declaration-merging": "off",
        "typescript/no-unsafe-enum-comparison": "off",
        "typescript/no-unsafe-function-type": "off",
        "typescript/no-unsafe-member-access": "off",
        "typescript/no-unsafe-return": "off",
        "typescript/no-unsafe-unary-minus": "off",
        "typescript/only-throw-error": "off",
        "typescript/restrict-template-expressions": "off",
        "typescript/strict-void-return": "off",
        "unicorn/consistent-function-scoping": "off",
        "unicorn/error-message": "off",
        "unicorn/no-empty-file": "off",
        "unicorn/no-useless-promise-resolve-reject": "off",
        "vitest/consistent-each-for": [
          "warn",
          {
            "describe": "each",
            "it": "each",
            "suite": "each",
            "test": "each",
          },
        ],
        "vitest/consistent-vitest-vi": "error",
        "vitest/hoisted-apis-on-top": "error",
        "vitest/no-import-node-test": "error",
        "vitest/prefer-called-times": "error",
        "vitest/prefer-describe-function-title": "error",
        "vitest/prefer-expect-type-of": "error",
        "vitest/prefer-to-be-object": "error",
        "vitest/require-local-test-context-for-concurrent-snapshots": "error",
        "vitest/warn-todo": "warn",
      },
    },
    {
      "files": [
        "**/*.config.{ts,cts,mts}",
        "**/*.setup.{ts,cts,mts}",
      ],
      "rules": {
        "import/no-anonymous-default-export": [
          "error",
          {
            "allowObject": true,
          },
        ],
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "unicorn/no-empty-file": "off",
      },
    },
  ],
  "plugins": [
    "eslint",
    "import",
    "jest",
    "node",
    "oxc",
    "promise",
    "typescript",
    "unicorn",
    "vitest",
  ],
  "rules": {
    "eslint/accessor-pairs": [
      "error",
      {
        "enforceForClassMembers": true,
      },
    ],
    "eslint/array-callback-return": [
      "error",
      {
        "allowImplicit": true,
      },
    ],
    "eslint/arrow-body-style": "off",
    "eslint/capitalized-comments": "off",
    "eslint/func-names": "off",
    "eslint/func-style": [
      "error",
      "declaration",
      {
        "allowArrowFunctions": true,
      },
    ],
    "eslint/grouped-accessor-pairs": [
      "error",
      "getBeforeSet",
    ],
    "eslint/id-length": "off",
    "eslint/init-declarations": "off",
    "eslint/max-depth": "off",
    "eslint/max-lines": "off",
    "eslint/max-lines-per-function": "off",
    "eslint/max-params": "off",
    "eslint/max-statements": "off",
    "eslint/new-cap": "off",
    "eslint/no-await-in-loop": "off",
    "eslint/no-continue": "off",
    "eslint/no-duplicate-imports": "off",
    "eslint/no-else-return": [
      "error",
      {
        "allowElseIf": false,
      },
    ],
    "eslint/no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "eslint/no-empty-function": "warn",
    "eslint/no-inline-comments": "off",
    "eslint/no-magic-numbers": "off",
    "eslint/no-return-assign": [
      "error",
      "always",
    ],
    "eslint/no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "eslint/no-shadow": "off",
    "eslint/no-ternary": "off",
    "eslint/no-undefined": "off",
    "eslint/no-unsafe-negation": [
      "error",
      {
        "enforceForOrderingRelations": true,
      },
    ],
    "eslint/no-unsafe-optional-chaining": [
      "error",
      {
        "disallowArithmeticOperators": true,
      },
    ],
    "eslint/no-unused-expressions": [
      "error",
      {
        "enforceForJSX": true,
      },
    ],
    "eslint/no-unused-vars": [
      "warn",
      {
        "argsIgnorePattern": "^_",
        "caughtErrorsIgnorePattern": "^_",
        "destructuredArrayIgnorePattern": "^_",
        "varsIgnorePattern": "^_",
      },
    ],
    "eslint/no-use-before-define": "off",
    "eslint/no-void": "off",
    "eslint/prefer-destructuring": [
      "error",
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "eslint/prefer-promise-reject-errors": "off",
    "eslint/require-await": "off",
    "eslint/sort-imports": "off",
    "eslint/sort-keys": "off",
    "eslint/valid-typeof": [
      "error",
      {
        "requireStringLiterals": false,
      },
    ],
    "import/consistent-type-specifier-style": [
      "error",
      "prefer-top-level",
    ],
    "import/default": "error",
    "import/exports-last": "off",
    "import/extensions": "off",
    "import/first": "error",
    "import/group-exports": "off",
    "import/max-dependencies": "off",
    "import/namespace": "error",
    "import/no-absolute-path": "error",
    "import/no-amd": "off",
    "import/no-anonymous-default-export": "error",
    "import/no-commonjs": [
      "error",
      {
        "allowConditionalRequire": false,
      },
    ],
    "import/no-cycle": "error",
    "import/no-default-export": "off",
    "import/no-duplicates": "error",
    "import/no-dynamic-require": "off",
    "import/no-empty-named-blocks": "error",
    "import/no-mutable-exports": "error",
    "import/no-named-as-default": "warn",
    "import/no-named-as-default-member": "error",
    "import/no-named-default": "warn",
    "import/no-named-export": "off",
    "import/no-namespace": "off",
    "import/no-nodejs-modules": "off",
    "import/no-relative-parent-imports": "off",
    "import/no-self-import": "error",
    "import/no-unassigned-import": "error",
    "import/no-webpack-loader-syntax": "off",
    "import/prefer-default-export": "off",
    "import/unambiguous": "warn",
    "jest/consistent-test-it": "off",
    "jest/max-expects": "off",
    "jest/max-nested-describe": "off",
    "jest/no-alias-methods": "off",
    "jest/no-done-callback": "off",
    "jest/no-hooks": "off",
    "jest/no-jasmine-globals": "off",
    "jest/no-large-snapshots": "off",
    "jest/no-restricted-jest-methods": "off",
    "jest/no-restricted-matchers": "off",
    "jest/no-test-prefixes": "off",
    "jest/no-untyped-mock-factory": "off",
    "jest/prefer-called-with": "off",
    "jest/prefer-lowercase-title": "off",
    "jest/prefer-spy-on": "off",
    "jest/require-hook": "off",
    "jest/require-top-level-describe": "off",
    "node/global-require": "off",
    "node/no-exports-assign": "off",
    "node/no-new-require": "off",
    "node/no-path-concat": "error",
    "node/no-process-env": "off",
    "oxc/approx-constant": "error",
    "oxc/bad-array-method-on-arguments": "error",
    "oxc/bad-bitwise-operator": "error",
    "oxc/bad-char-at-comparison": "error",
    "oxc/bad-comparison-sequence": "error",
    "oxc/bad-min-max-func": "error",
    "oxc/bad-object-literal-comparison": "error",
    "oxc/bad-replace-all-arg": "error",
    "oxc/branches-sharing-code": "warn",
    "oxc/const-comparisons": "warn",
    "oxc/double-comparisons": "error",
    "oxc/erasing-op": "error",
    "oxc/misrefactored-assign-op": "error",
    "oxc/missing-throw": "error",
    "oxc/no-accumulating-spread": "error",
    "oxc/no-async-await": "off",
    "oxc/no-async-endpoint-handlers": "off",
    "oxc/no-barrel-file": "off",
    "oxc/no-const-enum": "off",
    "oxc/no-map-spread": "error",
    "oxc/no-optional-chaining": "off",
    "oxc/no-rest-spread-properties": "off",
    "oxc/no-this-in-exported-function": "error",
    "oxc/number-arg-out-of-range": "error",
    "oxc/only-used-in-recursion": "error",
    "oxc/uninvoked-array-callback": "error",
    "promise/always-return": "error",
    "promise/avoid-new": "off",
    "promise/catch-or-return": "warn",
    "promise/no-callback-in-promise": "warn",
    "promise/no-multiple-resolved": "error",
    "promise/no-nesting": "warn",
    "promise/no-new-statics": "error",
    "promise/no-promise-in-callback": "warn",
    "promise/no-return-in-finally": "warn",
    "promise/no-return-wrap": [
      "error",
      {
        "allowReject": true,
      },
    ],
    "promise/param-names": "error",
    "promise/prefer-await-to-callbacks": "off",
    "promise/prefer-await-to-then": "error",
    "promise/prefer-catch": "warn",
    "promise/spec-only": "error",
    "promise/valid-params": "error",
    "typescript/array-type": [
      "error",
      {
        "default": "array-simple",
        "readonly": "generic",
      },
    ],
    "typescript/ban-ts-comment": [
      "error",
      {
        "ts-check": true,
        "ts-expect-error": false,
        "ts-ignore": true,
        "ts-nocheck": true,
      },
    ],
    "typescript/consistent-type-definitions": [
      "error",
      "type",
    ],
    "typescript/consistent-type-imports": [
      "error",
      {
        "fixStyle": "separate-type-imports",
        "prefer": "type-imports",
      },
    ],
    "typescript/explicit-function-return-type": "off",
    "typescript/explicit-module-boundary-types": [
      "error",
      {
        "allowArgumentsExplicitlyTypedAsAny": true,
      },
    ],
    "typescript/no-base-to-string": [
      "error",
      {
        "checkUnknown": true,
      },
    ],
    "typescript/no-confusing-void-expression": [
      "error",
      {
        "ignoreArrowShorthand": true,
      },
    ],
    "typescript/no-deprecated": "warn",
    "typescript/no-empty-interface": "off",
    "typescript/no-explicit-any": "off",
    "typescript/no-misused-promises": [
      "error",
      {
        "checksConditionals": true,
        "checksVoidReturn": false,
      },
    ],
    "typescript/no-namespace": [
      "error",
      {
        "allowDeclarations": true,
      },
    ],
    "typescript/no-non-null-assertion": "off",
    "typescript/no-restricted-types": [
      "error",
      {
        "types": {
          "[]": true,
          "null": true,
          "object": true,
        },
      },
    ],
    "typescript/no-unsafe-argument": "error",
    "typescript/no-unsafe-assignment": "error",
    "typescript/no-unsafe-call": "error",
    "typescript/no-unsafe-declaration-merging": "error",
    "typescript/no-unsafe-enum-comparison": "error",
    "typescript/no-unsafe-function-type": "error",
    "typescript/no-unsafe-member-access": "error",
    "typescript/no-unsafe-return": "error",
    "typescript/no-unsafe-type-assertion": "off",
    "typescript/no-unsafe-unary-minus": "error",
    "typescript/only-throw-error": [
      "error",
      {
        "allowThrowingAny": false,
      },
    ],
    "typescript/prefer-nullish-coalescing": [
      "error",
      {
        "ignoreConditionalTests": false,
      },
    ],
    "typescript/prefer-promise-reject-errors": "off",
    "typescript/prefer-readonly-parameter-types": "off",
    "typescript/require-array-sort-compare": [
      "error",
      {
        "ignoreStringArrays": true,
      },
    ],
    "typescript/require-await": "warn",
    "typescript/restrict-template-expressions": [
      "error",
      {
        "allowNullish": true,
      },
    ],
    "typescript/strict-boolean-expressions": "off",
    "typescript/switch-exhaustiveness-check": [
      "error",
      {
        "allowDefaultCaseForExhaustiveSwitch": false,
        "considerDefaultExhaustiveForUnions": true,
        "requireDefaultForNonUnion": true,
      },
    ],
    "typescript/unbound-method": "off",
    "unicorn/catch-error-name": "error",
    "unicorn/consistent-assert": "error",
    "unicorn/consistent-date-clone": "error",
    "unicorn/consistent-empty-array-spread": "error",
    "unicorn/consistent-existence-index-check": "error",
    "unicorn/consistent-function-scoping": "error",
    "unicorn/empty-brace-spaces": "error",
    "unicorn/error-message": "error",
    "unicorn/escape-case": "error",
    "unicorn/explicit-length-check": "error",
    "unicorn/filename-case": "off",
    "unicorn/new-for-builtins": "error",
    "unicorn/no-abusive-eslint-disable": "error",
    "unicorn/no-accessor-recursion": "error",
    "unicorn/no-anonymous-default-export": "error",
    "unicorn/no-array-callback-reference": "off",
    "unicorn/no-array-for-each": "error",
    "unicorn/no-array-method-this-argument": "error",
    "unicorn/no-array-reduce": "error",
    "unicorn/no-array-reverse": "error",
    "unicorn/no-array-sort": [
      "error",
    ],
    "unicorn/no-await-expression-member": "error",
    "unicorn/no-await-in-promise-methods": "error",
    "unicorn/no-console-spaces": "error",
    "unicorn/no-document-cookie": "error",
    "unicorn/no-empty-file": "warn",
    "unicorn/no-hex-escape": "error",
    "unicorn/no-immediate-mutation": "error",
    "unicorn/no-instanceof-array": "error",
    "unicorn/no-instanceof-builtins": "error",
    "unicorn/no-invalid-fetch-options": "error",
    "unicorn/no-invalid-remove-event-listener": "error",
    "unicorn/no-length-as-slice-end": "error",
    "unicorn/no-lonely-if": "error",
    "unicorn/no-magic-array-flat-depth": "error",
    "unicorn/no-negation-in-equality-check": "error",
    "unicorn/no-nested-ternary": "error",
    "unicorn/no-new-array": "error",
    "unicorn/no-new-buffer": "error",
    "unicorn/no-null": "off",
    "unicorn/no-object-as-default-parameter": "error",
    "unicorn/no-process-exit": "error",
    "unicorn/no-single-promise-in-promise-methods": "off",
    "unicorn/no-static-only-class": "error",
    "unicorn/no-thenable": "error",
    "unicorn/no-this-assignment": "error",
    "unicorn/no-typeof-undefined": [
      "error",
      {
        "checkGlobalVariables": true,
      },
    ],
    "unicorn/no-unnecessary-array-flat-depth": "error",
    "unicorn/no-unnecessary-array-splice-count": "error",
    "unicorn/no-unnecessary-await": "error",
    "unicorn/no-unnecessary-slice-end": "error",
    "unicorn/no-unreadable-array-destructuring": "error",
    "unicorn/no-unreadable-iife": "error",
    "unicorn/no-useless-collection-argument": "error",
    "unicorn/no-useless-error-capture-stack-trace": "error",
    "unicorn/no-useless-fallback-in-spread": "error",
    "unicorn/no-useless-length-check": "error",
    "unicorn/no-useless-promise-resolve-reject": "error",
    "unicorn/no-useless-spread": "error",
    "unicorn/no-useless-switch-case": "error",
    "unicorn/no-useless-undefined": "off",
    "unicorn/no-zero-fractions": "error",
    "unicorn/number-literal-case": "error",
    "unicorn/numeric-separators-style": [
      "error",
      {
        "onlyIfContainsSeparator": true,
      },
    ],
    "unicorn/prefer-add-event-listener": "error",
    "unicorn/prefer-array-find": "error",
    "unicorn/prefer-array-flat": "error",
    "unicorn/prefer-array-flat-map": "error",
    "unicorn/prefer-array-index-of": "error",
    "unicorn/prefer-array-some": "error",
    "unicorn/prefer-at": "error",
    "unicorn/prefer-bigint-literals": "off",
    "unicorn/prefer-blob-reading-methods": "error",
    "unicorn/prefer-class-fields": "error",
    "unicorn/prefer-classlist-toggle": "error",
    "unicorn/prefer-code-point": "error",
    "unicorn/prefer-date-now": "error",
    "unicorn/prefer-default-parameters": "error",
    "unicorn/prefer-dom-node-append": "error",
    "unicorn/prefer-dom-node-dataset": "error",
    "unicorn/prefer-dom-node-remove": "error",
    "unicorn/prefer-dom-node-text-content": "error",
    "unicorn/prefer-event-target": "error",
    "unicorn/prefer-global-this": "error",
    "unicorn/prefer-includes": "error",
    "unicorn/prefer-keyboard-event-key": "error",
    "unicorn/prefer-logical-operator-over-ternary": "error",
    "unicorn/prefer-math-min-max": "error",
    "unicorn/prefer-math-trunc": "error",
    "unicorn/prefer-modern-dom-apis": "error",
    "unicorn/prefer-modern-math-apis": "error",
    "unicorn/prefer-module": "error",
    "unicorn/prefer-native-coercion-functions": "error",
    "unicorn/prefer-negative-index": "error",
    "unicorn/prefer-node-protocol": "error",
    "unicorn/prefer-number-properties": [
      "error",
      {
        "checkInfinity": true,
        "checkNaN": true,
      },
    ],
    "unicorn/prefer-object-from-entries": "error",
    "unicorn/prefer-optional-catch-binding": "error",
    "unicorn/prefer-prototype-methods": "error",
    "unicorn/prefer-query-selector": "error",
    "unicorn/prefer-reflect-apply": "error",
    "unicorn/prefer-regexp-test": "error",
    "unicorn/prefer-response-static-json": "error",
    "unicorn/prefer-set-has": "error",
    "unicorn/prefer-set-size": "error",
    "unicorn/prefer-spread": "error",
    "unicorn/prefer-string-raw": "error",
    "unicorn/prefer-string-replace-all": "error",
    "unicorn/prefer-string-slice": "error",
    "unicorn/prefer-string-starts-ends-with": "error",
    "unicorn/prefer-string-trim-start-end": "error",
    "unicorn/prefer-structured-clone": "off",
    "unicorn/prefer-ternary": [
      "error",
      "always",
    ],
    "unicorn/prefer-top-level-await": "error",
    "unicorn/prefer-type-error": "error",
    "unicorn/relative-url-style": [
      "error",
      "never",
    ],
    "unicorn/require-array-join-separator": "error",
    "unicorn/require-module-attributes": "error",
    "unicorn/require-module-specifiers": "error",
    "unicorn/require-number-to-fixed-digits-argument": "error",
    "unicorn/require-post-message-target-origin": "error",
    "unicorn/switch-case-braces": [
      "error",
      "avoid",
    ],
    "unicorn/text-encoding-identifier-case": "error",
    "unicorn/throw-new-error": "error",
    "vitest/consistent-test-filename": "off",
    "vitest/no-conditional-tests": "off",
    "vitest/no-importing-vitest-globals": "off",
    "vitest/no-restricted-vi-methods": "off",
    "vitest/prefer-called-once": "off",
    "vitest/prefer-import-in-mock": "off",
    "vitest/prefer-to-be-falsy": "off",
    "vitest/prefer-to-be-truthy": "off",
  },
  "settings": {
    "vitest": {
      "typecheck": true,
    },
  },
}
`;

exports[`supports the \`react\` option 1`] = `
{
  "categories": {
    "correctness": "error",
    "pedantic": "error",
    "perf": "error",
    "restriction": "error",
    "style": "error",
    "suspicious": "error",
  },
  "env": {
    "browser": true,
    "node": true,
  },
  "options": {
    "typeAware": true,
  },
  "overrides": [
    {
      "files": [
        "**/*.d.{ts,cts,mts}",
        "**/*.test-d.{ts,cts,mts}",
      ],
      "rules": {
        "import/no-empty-named-blocks": "off",
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "typescript/consistent-type-definitions": "off",
        "typescript/no-empty-interface": "off",
        "typescript/no-empty-object-type": "off",
        "typescript/no-restricted-types": "off",
        "unicorn/require-module-specifiers": "off",
      },
    },
    {
      "files": [
        "**/*.test.{ts,tsx,cts,mts}",
        "**/*.test-d.{ts,cts,mts}",
      ],
      "rules": {
        "eslint/no-alert": "off",
        "eslint/no-empty-function": "off",
        "eslint/no-param-reassign": "off",
        "eslint/no-promise-executor-return": "off",
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "jest/expect-expect": "warn",
        "jest/no-commented-out-tests": "warn",
        "jest/no-conditional-expect": "error",
        "jest/no-conditional-in-test": "error",
        "jest/no-confusing-set-timeout": "error",
        "jest/no-deprecated-functions": "error",
        "jest/no-disabled-tests": "warn",
        "jest/no-duplicate-hooks": "warn",
        "jest/no-export": "error",
        "jest/no-focused-tests": "warn",
        "jest/no-identical-title": "warn",
        "jest/no-interpolation-in-snapshots": "error",
        "jest/no-mocks-import": "error",
        "jest/no-standalone-expect": "error",
        "jest/no-test-return-statement": "error",
        "jest/no-unneeded-async-expect-function": "error",
        "jest/padding-around-test-blocks": "error",
        "jest/prefer-comparison-matcher": "error",
        "jest/prefer-each": "error",
        "jest/prefer-equality-matcher": "error",
        "jest/prefer-expect-resolves": "error",
        "jest/prefer-hooks-in-order": "warn",
        "jest/prefer-hooks-on-top": "warn",
        "jest/prefer-jest-mocked": "error",
        "jest/prefer-mock-promise-shorthand": "error",
        "jest/prefer-mock-return-shorthand": "error",
        "jest/prefer-strict-equal": "error",
        "jest/prefer-to-be": "error",
        "jest/prefer-to-contain": "error",
        "jest/prefer-to-have-been-called": "error",
        "jest/prefer-to-have-been-called-times": "error",
        "jest/prefer-to-have-length": "error",
        "jest/prefer-todo": "error",
        "jest/require-to-throw-message": "error",
        "jest/valid-describe-callback": "error",
        "jest/valid-expect": "error",
        "jest/valid-title": "error",
        "jsx-a11y/alt-text": "off",
        "jsx-a11y/anchor-ambiguous-text": "off",
        "jsx-a11y/anchor-has-content": "off",
        "jsx-a11y/anchor-is-valid": "off",
        "jsx-a11y/click-events-have-key-events": "off",
        "jsx-a11y/heading-has-content": "off",
        "jsx-a11y/html-has-lang": "off",
        "jsx-a11y/iframe-has-title": "off",
        "jsx-a11y/jsx-no-target-blank": "off",
        "jsx-a11y/label-has-associated-control": "off",
        "jsx-a11y/lang": "off",
        "jsx-a11y/mouse-events-have-key-events": "off",
        "jsx-a11y/no-access-key": "off",
        "jsx-a11y/no-autofocus": "off",
        "jsx-a11y/no-distracting-elements": "off",
        "jsx-a11y/no-noninteractive-tabindex": "off",
        "jsx-a11y/no-redundant-roles": "off",
        "jsx-a11y/no-static-element-interactions": "off",
        "jsx-a11y/prefer-tag-over-role": "off",
        "jsx-a11y/scope": "off",
        "jsx-a11y/tabindex-no-positive": "off",
        "oxc/approx-constant": "off",
        "oxc/no-accumulating-spread": "off",
        "oxc/no-map-spread": "off",
        "promise/catch-or-return": "off",
        "promise/no-callback-in-promise": "off",
        "promise/no-promise-in-callback": "off",
        "promise/no-return-wrap": "off",
        "promise/prefer-await-to-then": "off",
        "react-perf/jsx-no-new-array-as-prop": "off",
        "react/button-has-type": "off",
        "react/checked-requires-onchange-or-readonly": "off",
        "react/jsx-no-target-blank": "off",
        "react/jsx-no-useless-fragment": "off",
        "react/no-array-index-key": "off",
        "react/no-children-prop": "off",
        "react/no-danger": "off",
        "typescript/ban-ts-comment": "off",
        "typescript/explicit-module-boundary-types": "off",
        "typescript/no-base-to-string": "off",
        "typescript/no-confusing-void-expression": "off",
        "typescript/no-extraneous-class": "off",
        "typescript/no-restricted-types": "off",
        "typescript/no-unsafe-argument": "off",
        "typescript/no-unsafe-assignment": "off",
        "typescript/no-unsafe-call": "off",
        "typescript/no-unsafe-declaration-merging": "off",
        "typescript/no-unsafe-enum-comparison": "off",
        "typescript/no-unsafe-function-type": "off",
        "typescript/no-unsafe-member-access": "off",
        "typescript/no-unsafe-return": "off",
        "typescript/no-unsafe-unary-minus": "off",
        "typescript/only-throw-error": "off",
        "typescript/restrict-template-expressions": "off",
        "typescript/strict-void-return": "off",
        "unicorn/consistent-function-scoping": "off",
        "unicorn/error-message": "off",
        "unicorn/no-empty-file": "off",
        "unicorn/no-useless-promise-resolve-reject": "off",
        "vitest/consistent-each-for": [
          "warn",
          {
            "describe": "each",
            "it": "each",
            "suite": "each",
            "test": "each",
          },
        ],
        "vitest/consistent-vitest-vi": "error",
        "vitest/hoisted-apis-on-top": "error",
        "vitest/no-import-node-test": "error",
        "vitest/prefer-called-times": "error",
        "vitest/prefer-describe-function-title": "error",
        "vitest/prefer-expect-type-of": "error",
        "vitest/prefer-to-be-object": "error",
        "vitest/require-local-test-context-for-concurrent-snapshots": "error",
        "vitest/warn-todo": "warn",
      },
    },
    {
      "files": [
        "**/*.config.{ts,cts,mts}",
        "**/*.setup.{ts,cts,mts}",
      ],
      "rules": {
        "import/no-anonymous-default-export": [
          "error",
          {
            "allowObject": true,
          },
        ],
        "import/no-unassigned-import": "off",
        "import/unambiguous": "off",
        "unicorn/no-empty-file": "off",
      },
    },
  ],
  "plugins": [
    "eslint",
    "import",
    "jest",
    "jsx-a11y",
    "node",
    "oxc",
    "promise",
    "react",
    "react-perf",
    "typescript",
    "unicorn",
    "vitest",
  ],
  "rules": {
    "eslint/accessor-pairs": [
      "error",
      {
        "enforceForClassMembers": true,
      },
    ],
    "eslint/array-callback-return": [
      "error",
      {
        "allowImplicit": true,
      },
    ],
    "eslint/arrow-body-style": "off",
    "eslint/capitalized-comments": "off",
    "eslint/func-names": "off",
    "eslint/func-style": [
      "error",
      "declaration",
      {
        "allowArrowFunctions": true,
      },
    ],
    "eslint/grouped-accessor-pairs": [
      "error",
      "getBeforeSet",
    ],
    "eslint/id-length": "off",
    "eslint/init-declarations": "off",
    "eslint/max-depth": "off",
    "eslint/max-lines": "off",
    "eslint/max-lines-per-function": "off",
    "eslint/max-params": "off",
    "eslint/max-statements": "off",
    "eslint/new-cap": "off",
    "eslint/no-await-in-loop": "off",
    "eslint/no-continue": "off",
    "eslint/no-duplicate-imports": "off",
    "eslint/no-else-return": [
      "error",
      {
        "allowElseIf": false,
      },
    ],
    "eslint/no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "eslint/no-empty-function": "warn",
    "eslint/no-inline-comments": "off",
    "eslint/no-magic-numbers": "off",
    "eslint/no-return-assign": [
      "error",
      "always",
    ],
    "eslint/no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "eslint/no-shadow": "off",
    "eslint/no-ternary": "off",
    "eslint/no-undefined": "off",
    "eslint/no-unsafe-negation": [
      "error",
      {
        "enforceForOrderingRelations": true,
      },
    ],
    "eslint/no-unsafe-optional-chaining": [
      "error",
      {
        "disallowArithmeticOperators": true,
      },
    ],
    "eslint/no-unused-expressions": [
      "error",
      {
        "enforceForJSX": true,
      },
    ],
    "eslint/no-unused-vars": [
      "warn",
      {
        "argsIgnorePattern": "^_",
        "caughtErrorsIgnorePattern": "^_",
        "destructuredArrayIgnorePattern": "^_",
        "varsIgnorePattern": "^_",
      },
    ],
    "eslint/no-use-before-define": "off",
    "eslint/no-void": "off",
    "eslint/prefer-destructuring": [
      "error",
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "eslint/prefer-promise-reject-errors": "off",
    "eslint/require-await": "off",
    "eslint/sort-imports": "off",
    "eslint/sort-keys": "off",
    "eslint/valid-typeof": [
      "error",
      {
        "requireStringLiterals": false,
      },
    ],
    "import/consistent-type-specifier-style": [
      "error",
      "prefer-top-level",
    ],
    "import/default": "error",
    "import/exports-last": "off",
    "import/extensions": "off",
    "import/first": "error",
    "import/group-exports": "off",
    "import/max-dependencies": "off",
    "import/namespace": "error",
    "import/no-absolute-path": "error",
    "import/no-amd": "off",
    "import/no-anonymous-default-export": "error",
    "import/no-commonjs": [
      "error",
      {
        "allowConditionalRequire": false,
      },
    ],
    "import/no-cycle": "error",
    "import/no-default-export": "off",
    "import/no-duplicates": "error",
    "import/no-dynamic-require": "off",
    "import/no-empty-named-blocks": "error",
    "import/no-mutable-exports": "error",
    "import/no-named-as-default": "warn",
    "import/no-named-as-default-member": "error",
    "import/no-named-default": "warn",
    "import/no-named-export": "off",
    "import/no-namespace": "off",
    "import/no-nodejs-modules": "off",
    "import/no-relative-parent-imports": "off",
    "import/no-self-import": "error",
    "import/no-unassigned-import": "error",
    "import/no-webpack-loader-syntax": "off",
    "import/prefer-default-export": "off",
    "import/unambiguous": "warn",
    "jest/consistent-test-it": "off",
    "jest/max-expects": "off",
    "jest/max-nested-describe": "off",
    "jest/no-alias-methods": "off",
    "jest/no-done-callback": "off",
    "jest/no-hooks": "off",
    "jest/no-jasmine-globals": "off",
    "jest/no-large-snapshots": "off",
    "jest/no-restricted-jest-methods": "off",
    "jest/no-restricted-matchers": "off",
    "jest/no-test-prefixes": "off",
    "jest/no-untyped-mock-factory": "off",
    "jest/prefer-called-with": "off",
    "jest/prefer-lowercase-title": "off",
    "jest/prefer-spy-on": "off",
    "jest/require-hook": "off",
    "jest/require-top-level-describe": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-ambiguous-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": "error",
    "jsx-a11y/aria-activedescendant-has-tabindex": "error",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": "error",
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/heading-has-content": "error",
    "jsx-a11y/html-has-lang": "error",
    "jsx-a11y/iframe-has-title": "error",
    "jsx-a11y/img-redundant-alt": "off",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "off",
    "jsx-a11y/mouse-events-have-key-events": "warn",
    "jsx-a11y/no-access-key": "error",
    "jsx-a11y/no-aria-hidden-on-focusable": "error",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-redundant-roles": "error",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/prefer-tag-over-role": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "node/global-require": "off",
    "node/no-exports-assign": "off",
    "node/no-new-require": "off",
    "node/no-path-concat": "error",
    "node/no-process-env": "off",
    "oxc/approx-constant": "error",
    "oxc/bad-array-method-on-arguments": "error",
    "oxc/bad-bitwise-operator": "error",
    "oxc/bad-char-at-comparison": "error",
    "oxc/bad-comparison-sequence": "error",
    "oxc/bad-min-max-func": "error",
    "oxc/bad-object-literal-comparison": "error",
    "oxc/bad-replace-all-arg": "error",
    "oxc/branches-sharing-code": "warn",
    "oxc/const-comparisons": "warn",
    "oxc/double-comparisons": "error",
    "oxc/erasing-op": "error",
    "oxc/misrefactored-assign-op": "error",
    "oxc/missing-throw": "error",
    "oxc/no-accumulating-spread": "error",
    "oxc/no-async-await": "off",
    "oxc/no-async-endpoint-handlers": "off",
    "oxc/no-barrel-file": "off",
    "oxc/no-const-enum": "off",
    "oxc/no-map-spread": "error",
    "oxc/no-optional-chaining": "off",
    "oxc/no-rest-spread-properties": "off",
    "oxc/no-this-in-exported-function": "error",
    "oxc/number-arg-out-of-range": "error",
    "oxc/only-used-in-recursion": "error",
    "oxc/uninvoked-array-callback": "error",
    "promise/always-return": "error",
    "promise/avoid-new": "off",
    "promise/catch-or-return": "warn",
    "promise/no-callback-in-promise": "warn",
    "promise/no-multiple-resolved": "error",
    "promise/no-nesting": "warn",
    "promise/no-new-statics": "error",
    "promise/no-promise-in-callback": "warn",
    "promise/no-return-in-finally": "warn",
    "promise/no-return-wrap": [
      "error",
      {
        "allowReject": true,
      },
    ],
    "promise/param-names": "error",
    "promise/prefer-await-to-callbacks": "off",
    "promise/prefer-await-to-then": "error",
    "promise/prefer-catch": "warn",
    "promise/spec-only": "error",
    "promise/valid-params": "error",
    "react-perf/jsx-no-jsx-as-prop": "off",
    "react-perf/jsx-no-new-array-as-prop": "error",
    "react-perf/jsx-no-new-function-as-prop": "off",
    "react-perf/jsx-no-new-object-as-prop": "off",
    "react/button-has-type": "error",
    "react/checked-requires-onchange-or-readonly": "error",
    "react/display-name": "off",
    "react/exhaustive-deps": "error",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forward-ref-uses-ref": "off",
    "react/iframe-missing-sandbox": "off",
    "react/jsx-boolean-value": "error",
    "react/jsx-curly-brace-presence": [
      "error",
      {
        "children": "never",
        "propElementValues": "always",
        "props": "never",
      },
    ],
    "react/jsx-filename-extension": [
      "error",
      {
        "extensions": [
          ".tsx",
        ],
      },
    ],
    "react/jsx-fragments": "error",
    "react/jsx-handler-names": "error",
    "react/jsx-key": "error",
    "react/jsx-max-depth": "off",
    "react/jsx-no-comment-textnodes": "error",
    "react/jsx-no-constructed-context-values": "error",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-script-url": "error",
    "react/jsx-no-target-blank": [
      "error",
      {
        "warnOnSpreadAttributes": true,
      },
    ],
    "react/jsx-no-undef": "error",
    "react/jsx-no-useless-fragment": "error",
    "react/jsx-pascal-case": "error",
    "react/jsx-props-no-spread-multi": "error",
    "react/jsx-props-no-spreading": "off",
    "react/no-array-index-key": "error",
    "react/no-children-prop": "error",
    "react/no-danger": "error",
    "react/no-danger-with-children": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-direct-mutation-state": "off",
    "react/no-find-dom-node": "off",
    "react/no-is-mounted": "off",
    "react/no-multi-comp": "off",
    "react/no-namespace": "error",
    "react/no-redundant-should-component-update": "off",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "off",
    "react/no-this-in-sfc": "off",
    "react/no-unescaped-entities": "error",
    "react/no-unknown-property": "error",
    "react/no-unsafe": "off",
    "react/no-will-update-set-state": "off",
    "react/only-export-components": "off",
    "react/prefer-es6-class": "off",
    "react/react-in-jsx-scope": "off",
    "react/require-render-return": "off",
    "react/rules-of-hooks": "error",
    "react/self-closing-comp": "error",
    "react/state-in-constructor": "off",
    "react/style-prop-object": "error",
    "react/void-dom-elements-no-children": "error",
    "typescript/array-type": [
      "error",
      {
        "default": "array-simple",
        "readonly": "generic",
      },
    ],
    "typescript/ban-ts-comment": [
      "error",
      {
        "ts-check": true,
        "ts-expect-error": false,
        "ts-ignore": true,
        "ts-nocheck": true,
      },
    ],
    "typescript/consistent-type-definitions": [
      "error",
      "type",
    ],
    "typescript/consistent-type-imports": [
      "error",
      {
        "fixStyle": "separate-type-imports",
        "prefer": "type-imports",
      },
    ],
    "typescript/explicit-function-return-type": "off",
    "typescript/explicit-module-boundary-types": [
      "error",
      {
        "allowArgumentsExplicitlyTypedAsAny": true,
      },
    ],
    "typescript/no-base-to-string": [
      "error",
      {
        "checkUnknown": true,
      },
    ],
    "typescript/no-confusing-void-expression": [
      "error",
      {
        "ignoreArrowShorthand": true,
      },
    ],
    "typescript/no-deprecated": "warn",
    "typescript/no-empty-interface": "off",
    "typescript/no-explicit-any": "off",
    "typescript/no-misused-promises": [
      "error",
      {
        "checksConditionals": true,
        "checksVoidReturn": false,
      },
    ],
    "typescript/no-namespace": [
      "error",
      {
        "allowDeclarations": true,
      },
    ],
    "typescript/no-non-null-assertion": "off",
    "typescript/no-restricted-types": [
      "error",
      {
        "types": {
          "[]": true,
          "null": true,
          "object": true,
        },
      },
    ],
    "typescript/no-unsafe-argument": "error",
    "typescript/no-unsafe-assignment": "error",
    "typescript/no-unsafe-call": "error",
    "typescript/no-unsafe-declaration-merging": "error",
    "typescript/no-unsafe-enum-comparison": "error",
    "typescript/no-unsafe-function-type": "error",
    "typescript/no-unsafe-member-access": "error",
    "typescript/no-unsafe-return": "error",
    "typescript/no-unsafe-type-assertion": "off",
    "typescript/no-unsafe-unary-minus": "error",
    "typescript/only-throw-error": [
      "error",
      {
        "allowThrowingAny": false,
      },
    ],
    "typescript/prefer-nullish-coalescing": [
      "error",
      {
        "ignoreConditionalTests": false,
      },
    ],
    "typescript/prefer-promise-reject-errors": "off",
    "typescript/prefer-readonly-parameter-types": "off",
    "typescript/require-array-sort-compare": [
      "error",
      {
        "ignoreStringArrays": true,
      },
    ],
    "typescript/require-await": "warn",
    "typescript/restrict-template-expressions": [
      "error",
      {
        "allowNullish": true,
      },
    ],
    "typescript/strict-boolean-expressions": "off",
    "typescript/switch-exhaustiveness-check": [
      "error",
      {
        "allowDefaultCaseForExhaustiveSwitch": false,
        "considerDefaultExhaustiveForUnions": true,
        "requireDefaultForNonUnion": true,
      },
    ],
    "typescript/unbound-method": "off",
    "unicorn/catch-error-name": "error",
    "unicorn/consistent-assert": "error",
    "unicorn/consistent-date-clone": "error",
    "unicorn/consistent-empty-array-spread": "error",
    "unicorn/consistent-existence-index-check": "error",
    "unicorn/consistent-function-scoping": "error",
    "unicorn/empty-brace-spaces": "error",
    "unicorn/error-message": "error",
    "unicorn/escape-case": "error",
    "unicorn/explicit-length-check": "error",
    "unicorn/filename-case": "off",
    "unicorn/new-for-builtins": "error",
    "unicorn/no-abusive-eslint-disable": "error",
    "unicorn/no-accessor-recursion": "error",
    "unicorn/no-anonymous-default-export": "error",
    "unicorn/no-array-callback-reference": "off",
    "unicorn/no-array-for-each": "error",
    "unicorn/no-array-method-this-argument": "error",
    "unicorn/no-array-reduce": "error",
    "unicorn/no-array-reverse": "error",
    "unicorn/no-array-sort": [
      "error",
    ],
    "unicorn/no-await-expression-member": "error",
    "unicorn/no-await-in-promise-methods": "error",
    "unicorn/no-console-spaces": "error",
    "unicorn/no-document-cookie": "error",
    "unicorn/no-empty-file": "warn",
    "unicorn/no-hex-escape": "error",
    "unicorn/no-immediate-mutation": "error",
    "unicorn/no-instanceof-array": "error",
    "unicorn/no-instanceof-builtins": "error",
    "unicorn/no-invalid-fetch-options": "error",
    "unicorn/no-invalid-remove-event-listener": "error",
    "unicorn/no-length-as-slice-end": "error",
    "unicorn/no-lonely-if": "error",
    "unicorn/no-magic-array-flat-depth": "error",
    "unicorn/no-negation-in-equality-check": "error",
    "unicorn/no-nested-ternary": "error",
    "unicorn/no-new-array": "error",
    "unicorn/no-new-buffer": "error",
    "unicorn/no-null": "off",
    "unicorn/no-object-as-default-parameter": "error",
    "unicorn/no-process-exit": "error",
    "unicorn/no-single-promise-in-promise-methods": "off",
    "unicorn/no-static-only-class": "error",
    "unicorn/no-thenable": "error",
    "unicorn/no-this-assignment": "error",
    "unicorn/no-typeof-undefined": [
      "error",
      {
        "checkGlobalVariables": true,
      },
    ],
    "unicorn/no-unnecessary-array-flat-depth": "error",
    "unicorn/no-unnecessary-array-splice-count": "error",
    "unicorn/no-unnecessary-await": "error",
    "unicorn/no-unnecessary-slice-end": "error",
    "unicorn/no-unreadable-array-destructuring": "error",
    "unicorn/no-unreadable-iife": "error",
    "unicorn/no-useless-collection-argument": "error",
    "unicorn/no-useless-error-capture-stack-trace": "error",
    "unicorn/no-useless-fallback-in-spread": "error",
    "unicorn/no-useless-length-check": "error",
    "unicorn/no-useless-promise-resolve-reject": "error",
    "unicorn/no-useless-spread": "error",
    "unicorn/no-useless-switch-case": "error",
    "unicorn/no-useless-undefined": "off",
    "unicorn/no-zero-fractions": "error",
    "unicorn/number-literal-case": "error",
    "unicorn/numeric-separators-style": [
      "error",
      {
        "onlyIfContainsSeparator": true,
      },
    ],
    "unicorn/prefer-add-event-listener": "error",
    "unicorn/prefer-array-find": "error",
    "unicorn/prefer-array-flat": "error",
    "unicorn/prefer-array-flat-map": "error",
    "unicorn/prefer-array-index-of": "error",
    "unicorn/prefer-array-some": "error",
    "unicorn/prefer-at": "error",
    "unicorn/prefer-bigint-literals": "off",
    "unicorn/prefer-blob-reading-methods": "error",
    "unicorn/prefer-class-fields": "error",
    "unicorn/prefer-classlist-toggle": "error",
    "unicorn/prefer-code-point": "error",
    "unicorn/prefer-date-now": "error",
    "unicorn/prefer-default-parameters": "error",
    "unicorn/prefer-dom-node-append": "error",
    "unicorn/prefer-dom-node-dataset": "error",
    "unicorn/prefer-dom-node-remove": "error",
    "unicorn/prefer-dom-node-text-content": "error",
    "unicorn/prefer-event-target": "error",
    "unicorn/prefer-global-this": "error",
    "unicorn/prefer-includes": "error",
    "unicorn/prefer-keyboard-event-key": "error",
    "unicorn/prefer-logical-operator-over-ternary": "error",
    "unicorn/prefer-math-min-max": "error",
    "unicorn/prefer-math-trunc": "error",
    "unicorn/prefer-modern-dom-apis": "error",
    "unicorn/prefer-modern-math-apis": "error",
    "unicorn/prefer-module": "error",
    "unicorn/prefer-native-coercion-functions": "error",
    "unicorn/prefer-negative-index": "error",
    "unicorn/prefer-node-protocol": "error",
    "unicorn/prefer-number-properties": [
      "error",
      {
        "checkInfinity": true,
        "checkNaN": true,
      },
    ],
    "unicorn/prefer-object-from-entries": "error",
    "unicorn/prefer-optional-catch-binding": "error",
    "unicorn/prefer-prototype-methods": "error",
    "unicorn/prefer-query-selector": "error",
    "unicorn/prefer-reflect-apply": "error",
    "unicorn/prefer-regexp-test": "error",
    "unicorn/prefer-response-static-json": "error",
    "unicorn/prefer-set-has": "error",
    "unicorn/prefer-set-size": "error",
    "unicorn/prefer-spread": "error",
    "unicorn/prefer-string-raw": "error",
    "unicorn/prefer-string-replace-all": "error",
    "unicorn/prefer-string-slice": "error",
    "unicorn/prefer-string-starts-ends-with": "error",
    "unicorn/prefer-string-trim-start-end": "error",
    "unicorn/prefer-structured-clone": "off",
    "unicorn/prefer-ternary": [
      "error",
      "always",
    ],
    "unicorn/prefer-top-level-await": "error",
    "unicorn/prefer-type-error": "error",
    "unicorn/relative-url-style": [
      "error",
      "never",
    ],
    "unicorn/require-array-join-separator": "error",
    "unicorn/require-module-attributes": "error",
    "unicorn/require-module-specifiers": "error",
    "unicorn/require-number-to-fixed-digits-argument": "error",
    "unicorn/require-post-message-target-origin": "error",
    "unicorn/switch-case-braces": [
      "error",
      "avoid",
    ],
    "unicorn/text-encoding-identifier-case": "error",
    "unicorn/throw-new-error": "error",
    "vitest/consistent-test-filename": "off",
    "vitest/no-conditional-tests": "off",
    "vitest/no-importing-vitest-globals": "off",
    "vitest/no-restricted-vi-methods": "off",
    "vitest/prefer-called-once": "off",
    "vitest/prefer-import-in-mock": "off",
    "vitest/prefer-to-be-falsy": "off",
    "vitest/prefer-to-be-truthy": "off",
  },
  "settings": {
    "vitest": {
      "typecheck": true,
    },
  },
}
`;
